// Copyright 2021-2022 Intrinsec. All rights reserved.

syntax = "proto3";
package sanitize;

option go_package = "github.com/intrinsec/protoc-gen-sanitize/sanitize";

import "google/protobuf/descriptor.proto";

enum Sanitization {
    NONE = 0;
    TEXT = 1;
    HTML = 2;
}

extend google.protobuf.FileOptions {
    bool disable_file = 1102;
}

extend google.protobuf.MessageOptions {
    bool disable_message = 1102;
}

extend google.protobuf.FieldOptions {
    bool disable_field = 1102;
    FieldRules rules   = 1103;
}

message FieldRules {
    Sanitization kind  = 1;
    optional bool trim = 2;
}
